--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,19 +23,21 @@
     }
   },
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "next-env.d.ts",
     ".next/types/**/*.ts",
-    "src/context/NotificationContext.jsx",
-    "src/context/UserProvider.jsx",
-    "src/context/HistoryContext.jsx",
-    "src/app/api/auth/signup/route.jsx",
+    "src/utils/mailer.jsx",
+    "socket-server/socket.ts",
+    "src/components/ChatBox.tsx",
     "src/app/api/users/route.jsx",
     "src/app/api/inbox/route.jsx",
-    "src/components/ChatBox.tsx",
-    "src/app/api/notifications/route.jsx",
+    "src/context/UserProvider.jsx",
     "src/app/api/messages/route.tsx",
-    "socket.ts"],
+    "src/context/HistoryContext.jsx",
+    "src/app/api/auth/signup/route.jsx",
+    "src/app/api/notifications/route.jsx",
+    "src/context/NotificationContext.jsx"
+    ],
   "exclude": ["node_modules"]
 }
