--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:next\" \"npm run dev:socket\"",
     "dev:next": "next dev --turbopack",
-    "dev:socket": "ts-node socket-server/tsconfig.server.json socket-server/socket.ts",
+    "dev:socket": "tsx socket-server/socket.ts",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
@@ -37,6 +37,7 @@
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
