--- a/socket-server/tsconfig.server.json
+++ b/socket-server/tsconfig.server.json
@@ -1,16 +1,24 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "ES2017",
-    "outDir": "./dist",
-    "moduleResolution": "Node",
     "strict": true,
-    "noEmit": false,
-    "isolatedModules": false,
+    "noEmit": true,
+    "rootDir": ".",
+    "module": "ESNext",
+    "target": "ES2020",
+    "outDir": "./dist",
+    "skipLibCheck": true,
+    "isolatedModules": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "resolveJsonModule": true,
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"]
   },
-  "include": ["socket-server/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "./**/*.ts",
+    "../types.ts",
+    "../src/**/*.ts"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
